# enterprise-mcp-agent

./: README.md
enterprise-mcp-agent/: .gitignore  README.md  dashboard.py  integrations.py  pyproject.toml  requirements.txt  server.py  sql_generator.py  synthetic_data.py  vector_search.py
enterprise-mcp-agent/documents/: customer_success_notes.txt  operations_review.txt  security_and_compliance.txt
enterprise-mcp-agent/examples/: demo_prompts.md
