[project]
name = "enterprise-mcp-agent"
version = "0.1.0"
description = "Local MCP server exposing enterprise business data, documents, and workflow analysis tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "streamlit>=1.36.0",
]

[project.optional-dependencies]
vector = [
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
